# chitragupta

./: .air.toml  .env.sample  .gitignore  README.md  go.mod  go.sum
.github/workflows/: dev-push.yml  release-push.yml
backend/: .env.sample  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/chitragupta/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  apps.py  exceptions.py  mixins.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_repoowner_is_organization.py  0003_secretscanresult_is_false_positive.py  0004_asset_vulnerability.py
backend/utils/: github.py
cmd/cg/: main.go
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Header.jsx  Sidebar.jsx
frontend/src/layouts/: MainLayout.jsx
pkg/config/: config.go
pkg/db/: db.go
pkg/types/: repos.go
