[project]
name = "chitragupta"
version = "0.1.0"
description = "A vulnerability management and analysis tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.7",
    "django-filter>=25.2",
    "django-mongodb-backend>=5.2.1",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "markdown>=3.9",
    "python-dotenv>=1.1.1",
]
