[project]
name = "chitragupta"
version = "0.1.0"
description = "A vulnerability management and analysis tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery-redbeat>=2.3.3",
    "celery[redis]>=5.5.3",
    "django>=5.2.7",
    "django-filter>=25.2",
    "django-mongodb-backend>=5.2.1",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "ipython>=9.6.0",
    "markdown>=3.9",
    "pygithub>=2.8.1",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.38.0",
    "whitenoise>=6.11.0",
]
